tests/snapshots/test_repo_variants__tauri_app_classification_and_render@tauri_app_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [
        BundleRow {
            label: "apps/desktop",
            kind_label: "tauri (single-source)",
            ecosystem: "tauri",
            path: RepoPathBuf(
                [
                    97,
                    112,
                    112,
                    115,
                    47,
                    100,
                    101,
                    115,
                    107,
                    116,
                    111,
                    112,
                ],
            ),
            selected: true,
        },
    ],
    units: [],
    externally_managed: [],
    needs_decision: [],
    groups: [],
}
