tests/snapshots/test_repo_variants__unversionable_jvm_sdk_classification_and_render@unversionable_jvm_sdk_init_render.snap
---
source: tests/test_repo_variants.rs
expression: "& rendered"
---
 ▲  Needs a decision
    ! sdks/kotlin  JVM library — no version belaf can write (build.gradle.kts)
        ↳ JVM project with no version belaf can write: build.gradle.kts:16 assigns `version = "…"` i
