tests/snapshots/test_repo_variants__unversionable_jvm_sdk_classification_and_render@unversionable_jvm_sdk_struct.snap
---
source: tests/test_repo_variants.rs
expression: "& view"
---
ReleaseUnitView {
    bundles: [],
    units: [],
    externally_managed: [],
    needs_decision: [
        DecisionRow {
            label: "sdks/kotlin",
            kind_label: "JVM library — no version belaf can write (build.gradle.kts)",
            ecosystem: "kotlin",
            path: RepoPathBuf(
                [
                    115,
                    100,
                    107,
                    115,
                    47,
                    107,
                    111,
                    116,
                    108,
                    105,
                    110,
                ],
            ),
            remedy: Some(
                "JVM project with no version belaf can write: build.gradle.kts:16 assigns `version = \"…\"` inside a block, and the rewriter only writes an assignment at the start of a line. Move the version to `gradle.properties` as `version=<current>` and read it back in the build script, then re-run `belaf init --auto-detect`",
            ),
        },
    ],
    groups: [],
}
